--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Save Lives</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <div class="main">
-    <h1>Helping donors</h1>
-    <small>Coming soon...</small>
+    <div class="hello">
+      <h1>Helping donors to save lives</h1>
+      <small>Coming soon...</small>
+    </div>
   </div>
 
 </body>
