--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <div class="main">
     <div class="hello">
-      <h1>Helping donors to save lives</h1>
-      <small>Coming soon...</small>
+      <small>Aguarde, estamos chegando!</small>
     </div>
   </div>
 
