--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="main">
     <div class="hello">
-      <small>Aguarde, estamos chegando!</small>
+      <h1>Aguarde, estamos chegando!</h1>
     </div>
   </div>
 
